[package]
name = "benchrunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
directories = "4.0.1"
libc = "0.2.112"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
structopt = "0.3.25"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
